# jde

./: .gitignore  README.md  pyproject.toml
src/jde/: aggregators.py  architectures.py  criteria.py  hooks.py  loss_combiners.py  loss_functions.py  metrics.py  module_wrappers.py  printing.py  problems.py  settings.py  solution_generators.py  solutions.py  solve.py  utils.py
src/scripts/: download_study.py  extract_best_runs.py  gram_study.py  iwrm_study.py  plot_memory_timeline.py  plot_results.py  profiling_study.py  refine_lr_range.py  speed_study.py  study_pipeline.sh  study_pipeline_16.sh  study_pipeline_4.sh  study_pipeline_64.sh  study_pipeline_adam_cifar10.sh  study_pipeline_adam_svhn.sh
src/torchjd/: __init__.py
src/torchjd/criterion/: __init__.py  _utils.py  base.py  loss_list.py  split_tensor.py
src/torchjd/module_wrapper/: __init__.py  base.py  criterion_wrapper.py  full_jd.py  gd.py  grad_wrapper.py  gradient_scaling_layer.py  output_jd.py  partial_jd.py  tensor_builder.py  unifying_aggregation_wrapper.py
src/torchjd/tensor/: __init__.py  tensor_hierarchy.py
src/torchjd/tree/: __init__.py  tree.py
