[project]
name = "jde"
version = "0.1.0"
description = "Multi-objective deep learning experiments to test jacobian descent approaches."
authors = [
	{name = "Valerian Rey", email = "valerian.rey@gmail.com"},
	{name = "Pierre Quinton", email = "pierre.quinton@gmail.com"}
]
requires-python = ">=3.10, <3.11.0"
dependencies = [
    "secprint>=0.1",
    "docopt>=0.6",
    "pandas>=2.0",
    "torch>=2.0.0, !=2.1.1",  # Version 2.1.1 can't be installed on gcloud VM somehow
    "torchmetrics>=0.11",
    "torchvision>=0.15",
    "wandb>=0.15.8",
    "torchinfo>=1.8.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.3",
    "quadprog>=0.1.9, != 0.1.10",  # [torchjd] Doesn't work before 0.1.9, 0.1.10 is yanked
    "numpy>=1.21.0",  # [torchjd] Does not work before 1.21
    "qpsolvers>=1.0.1",  # [torchjd] Does not work before 1.0.1
    "cvxpy>=1.3.0",  # [torchjd] No Clarabel solver before 1.3.0
]

[project.scripts]
iwrm_study = "scripts.iwrm_study:main"
speed_study = "scripts.speed_study:main"
download_study = "scripts.download_study:main"
refine_lr_range = "scripts.refine_lr_range:main"
extract_best_runs = "scripts.extract_best_runs:main"
plot_results = "scripts.plot_results:main"

[tool.pdm.dev-dependencies]
check = [
	"pre-commit>=2.9.2"  # isort doesn't work before 2.9.2
]
