[project]
name = "jde"
version = "0.1.0"
description = "Multi-objective deep learning experiments to test jacobian descent approaches."
authors = [
	{name = "Valerian Rey", email = "valerian.rey@gmail.com"},
	{name = "Pierre Quinton", email = "pierre.quinton@gmail.com"}
]
requires-python = ">=3.10, <3.11.0"
dependencies = [
    "secprint>=0.1",
    "docopt>=0.6",
    "pandas>=2.0",
    "torch>=2.10.0",
    "torchmetrics>=0.11",
    "torchvision>=0.15",
    "wandb>=0.15.8",
    "torchinfo>=1.8.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.3",
    "numpy>=1.21.2",
    "torchjd[full]>=0.9.0",
]

[project.scripts]
iwrm_study = "scripts.iwrm_study:main"
gram_study = "scripts.gram_study:main"
speed_study = "scripts.speed_study:main"
download_study = "scripts.download_study:main"
refine_lr_range = "scripts.refine_lr_range:main"
extract_best_runs = "scripts.extract_best_runs:main"
plot_results = "scripts.plot_results:main"
profiling_study = "scripts.profiling_study:main"
plot_memory_timeline = "scripts.plot_memory_timeline:main"

[dependency-groups]
check = [
    "pre-commit>=2.9.2",  # isort doesn't work before 2.9.2
]
